Symbol Table Header was added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Compiler_Proj)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Compiler_Proj main.cpp File_Desc.h File_Desc.cpp scanner.h scanner.cpp scanner.cpp scanner.cpp)
+add_executable(Compiler_Proj main.cpp File_Desc.h File_Desc.cpp scanner.h scanner.cpp scanner.cpp scanner.cpp Symbol.h)
